full jwt support, tests, docs
